--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,9 @@ board==1.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.1.2
-Django==4.0.3
 Flask==2.1.1
 Flask-SQLAlchemy==2.5.1
+gunicorn==20.1.0
 idna==3.3
 itsdangerous==2.1.2
 Jinja2==3.1.1
